refactor: test order of middlewares
