# src/modules/user/user.controller.ts
@@ -5,19 +5,52 @@ import ApiError from '../errors/ApiError.js';
 import pick from '../utils/pick.js';
 import { IOptions } from '../paginate/paginate.js';
 import * as userService from './user.service.js';
-import { Controller, Get, Middlewares, Request, Response, Route, Security, SuccessResponse } from 'tsoa';
+import {
+  Body,
+  Controller,
+  Get,
+  Middlewares,
+  Path,
+  Post,
+  Request,
+  Response,
+  Route,
+  Security,
+  SuccessResponse,
+  Tags,
+} from 'tsoa';
 import { IApiError } from '../errors/error.js';
 import auth from './../auth/auth.middleware.js';
-import { IUserBaseModel } from './user.interfaces.js';
+import { IUserBaseModel, NewCreatedUser } from './user.interfaces.js';
 import { PERMISSIONS } from './../../config/roles.js';
+import validate from '../validate/validate.middleware.js';
+import * as userValidation from './user.validation.js';
 
 @Route('v1/users')
+@Tags('Users')
 export class UserController extends Controller {
+  /**
+   * Create users by admin.
+   */
+  @Response<IApiError>(400, 'Validation failed.')
+  @Response<IApiError>(401, 'Unauthorized')
+  @Response<IApiError>(403, 'Forbidden')
+  @Response<IApiError>(422, 'Unprocessable entity.')
+  @SuccessResponse('201', 'Created.')
+  @Middlewares(validate(userValidation.createUser))
+  @Security('jwt') // just adds auth specs to openapi
+  @Middlewares(auth(PERMISSIONS.manageUsers)) // actually handles auth
+  @Post()
+  public async createUser(@Body() requestBody: NewCreatedUser): Promise<IUserBaseModel> {
+    const user = await userService.createUser(requestBody);
+    return user;
+  }
+
   @Response<IApiError>(401, 'Unauthorized')
   @SuccessResponse('200', 'Success')
-  @Get('me')
-  @Middlewares(auth()) // actually handles auth
   @Security('jwt') // just adds auth specs to openapi
+  @Middlewares(auth()) // actually handles auth
+  @Get('me')
   public async getMe(@Request() req: ExpRequest): Promise<IUserBaseModel> {
     const user = await userService.getUserById(req.user.id);
     if (!user) {
@@ -26,13 +59,16 @@ export class UserController extends Controller {
     return user;
   }
 
+  @Response<IApiError>(400, 'Validation failed.')
   @Response<IApiError>(401, 'Unauthorized')
   @Response<IApiError>(403, 'Forbidden')
+  @Response<IApiError>(404, 'Not Found')
   @SuccessResponse('200', 'Success')
-  @Get('{userId}')
-  @Middlewares(auth(PERMISSIONS.getUsers)) // actually handles auth
+  @Middlewares(validate(userValidation.getUser))
   @Security('jwt') // just adds auth specs to openapi
-  public async getUser(userId: string): Promise<IUserBaseModel> {
+  @Middlewares(auth(PERMISSIONS.getUsers)) // actually handles auth
+  @Get('{userId}')
+  public async getUser(@Path() userId: string): Promise<IUserBaseModel> {
     const user = await userService.getUserById(userId);
     if (!user) {
       throw new ApiError(httpStatus.NOT_FOUND, 'User not found');
