# src/modules/user/user.validation.ts
@@ -1,12 +1,15 @@
 import Joi from 'joi';
 import { password, objectId } from '../validate/custom.validation.js';
 import { NewCreatedUser } from './user.interfaces.js';
+import { ROLES } from './../../config/roles.js';
 
 const createUserBody: Record<keyof NewCreatedUser, any> = {
   email: Joi.string().required().email(),
   password: Joi.string().required().custom(password),
   name: Joi.string().required(),
-  role: Joi.string().required().valid('user', 'admin'),
+  role: Joi.string()
+    .required()
+    .valid(...Object.values(ROLES)),
 };
 
 export const createUser = {
